# lmtune

./: .claude_feedback_2026-05-04.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LOCAL_QUICKSTART.md  README.md  autoresearch.md  autoresearch.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
autoresearch/: goal.md  search_space.yaml
b200/: QUICKSTART.md  README.md  perf-changelog.yaml
b200/dashboards/: compare.html  index.html  matrix.html  spaces.html
b200/docs/: ANALYSIS_template.md  B0_runbook.md  b200_environment.md  experiment_plan.md  interconnect_optimization.md  lowlevel_axis_catalog.md  model_catalog_2026-05.md  port_forward_runbook.md  rdma_perftest_baseline.md  regressions.md  tuning_roadmap_2026-05.md  usage_scenarios.md  vllm_0.17.1_args_catalog.md  vllm_axis_catalog.md
b200/endpoints/: b200_gpt-oss-120b-wide-ep.yaml  b200_gpt-oss-120b.yaml  b200_gpt-oss-20b.yaml  b200_minimax_m2.yaml  b200_minimax_m2_pd.yaml  b200_pd_llama70b.yaml  b200_smoke.yaml  b200_smoke_localhost.yaml  minikube_smoke.yaml
b200/registry/: known_regressions.yaml  vllm_0.17.1_axes.yaml
b200/scripts/: debug_pod.yaml  debug_pod_v050.yaml  debug_pod_v060.yaml  fabric_probe.sh  fabric_test.yaml  pf_gateway.sh  pf_keepalive.sh  probe.sh  rdma_bench.sh  setup_gateway_provider.sh  setup_host.sh  system_snapshot.sh
b200/search-spaces/: b0_smoke.yaml  b1_baselines.yaml  b1_pd_ratio.yaml  b2_vllm_engine.yaml  b2_vllm_engine_v0171.yaml  b3_gpt_oss_120b_extended.yaml  b3_gpt_oss_120b_full.yaml  b3_gpt_oss_120b_min.yaml  b3_gpt_oss_120b_v2.yaml  b3_gpt_oss_120b_v3.yaml  b3_minimax_m2.yaml  b3_minimax_m2_pd.yaml  b3_parallelism.yaml  b4_gpt_oss_120b_wide_ep.yaml  b4_welllit_paths.yaml  b5_combined_pareto.yaml  b6_interconnect_tier1.yaml  b6_lowlevel.yaml  w_local_minimal.yaml  w_local_tier2.yaml  w_minikube_minimal.yaml
configs/autoresearch/: axis_priors.yaml
configs/endpoints/: llmd_k8s.yaml  llmd_pd_qwen25.yaml  local_vllm.yaml  local_vllm_autotune.yaml  local_vllm_smoke.yaml  minikube_pd_qwen25.yaml
configs/profiles/: smoke.yaml  smoke_guidellm.yaml
dashboards/grafana/: endpoint_live.json
data/autotune/: FINAL_REPORT.md  hypotheses_round1.json  hypotheses_round2.json  report_round1.md  report_round2.md
docker/: Dockerfile.trial_runner
docs/: architecture.md  autotune_loop.md  coding_agent_benchmark_plan_v3.md  search_principles.md  search_tooling_2026-04.md  워크로드_데이터셋_가이드_v3.md
docs/architecture/: PLUG_PATTERN.md  REFACTOR-PLAN.md
docs/contracts/: README.md  cluster-spec.md  storage-records.md  workload-spec.md
examples/controllers/: README.md  mock_server.py
k8s/: trial-job-template.yaml
monitoring/: README.md  docker-compose.yml  prometheus.yml
scripts/: analyze_per_workload.py  autotune_report.py  autotune_run.py  bench_score.py  crontab.sample  lmtune_score.py  nightly_sweep.sh  run_profile.sh  vllm_restart.sh
src/bench/: cli.py  cli_orchestrate.py  cli_search.py  profiles.py
src/lmtune/: cli.py  cli_contracts.py  cli_dashboard.py  cli_orchestrate.py  cli_search.py  cli_storage.py  cli_tuner.py  cli_workload.py  endpoints.py  profiles.py
tests/: test_analysis.py  test_cli_result_snapshot.py  test_cli_version.py  test_collectors.py  test_detectors.py  test_e1_data_model.py  test_e2_workloads.py  test_e3_registry.py  test_e4_analysis.py  test_e5_plots_sinks.py  test_e6_presets.py  test_e7_autotune_bridge.py  test_pyproject_plug_extras.py  test_runners.py  test_s6_ask_tell.py  test_schema.py  test_schema_v1alpha1.py  test_storage.py  test_visualization.py
tests/contracts/: test_cli_contracts.py  test_cli_contracts_describe_record.py  test_cli_contracts_list_records.py  test_cli_contracts_make_template.py  test_query_spec.py  test_record_kinds_drift.py  test_record_spec.py  test_result_spec.py
tests/dashboard/: test_axis_extras.py  test_build.py  test_explainability.py  test_inferencex_schema.py
tests/deploy/: test_base.py  test_chart_render_pp_pcp_dcp.py  test_health.py  test_llmd_overlay.py  test_llmd_path_routing.py  test_llmd_render.py  test_local_vllm.py  test_local_vllm_tier2.py  test_postrender_runtime_class.py  test_rollout_watcher.py
tests/models/: test_registry.py
tests/orchestrate/: _pool_helpers.py  test_failure_handler.py  test_gpu_lease.py  test_k8s_manifest.py  test_process_pool.py  test_writer_queue.py
tests/runners/: test_result_emit.py
tests/search/: test_analysis.py  test_botorch.py  test_cost_tier_sampler.py  test_llm_prior.py  (+12 more)
(+332 files in other folders)
