[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmtune"
version = "0.1.0"
description = "Coding agent 워크로드 기반 LLM endpoint 벤치마크 자동화 시스템"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "jinmoo" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "prometheus-api-client>=0.5.5",
    "requests>=2.31",
    "python-ulid>=2.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
runners = [
    # 외부 벤치마크 도구. aiperf 는 pip 배포가 안정적이지 않으므로 git 설치 안내만 README 참조.
    "guidellm>=0.2.0",
]
search = [
    # Phase S1~S5 탐색 엔진. Optuna 래핑 + 수학 기법용 스택.
    "optuna>=3.5",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "SALib>=1.5",    # Phase S5 Sobol / Morris / FAST sensitivity
]
search-gp = [
    # Phase S5 follow-up #4: BoTorch GP backend for large-budget studies.
    # Heavy (torch + gpytorch). Install only when the search truly benefits
    # (see docs/search_tooling_2026-04.md §3.1).
    "optuna-integration[botorch]>=3.4",
]
distributed = [
    # Phase S3 K8s Job backend. kubernetes-client 필요; Ray 는 non-goal.
    "kubernetes>=29.0",
    "jinja2>=3.1",
]
workloads = [
    # lmtune#WS — WorkloadSpec contract master = lm-workloads.
    # 본 dep 가 있으면 contracts/workload_spec.py 가 직접 re-export → drift 0.
    # 미설치 환경에선 LiteralWorkloadProvider 도 불가 (WorkloadSpec import 자체 실패).
    # 사용자 host 의 file:// editable 사용 시 별도 `pip install -e /path/to/workloads` 권장.
    "lm-workloads",
]

[project.scripts]
lmtune = "lmtune.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lmtune.storage" = ["*.sql"]
"lmtune.visualization" = ["grafana/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data/archive", "scripts/archived"]

[tool.ruff.lint]
# CLAUDE.md 의 권장 룰셋: E (pycodestyle errors), F (pyflakes),
# I (isort), B (bugbear), UP (pyupgrade), SIM (simplify).
select = ["E", "F", "I", "B", "UP", "SIM"]
# 흔한 false-positive 또는 프로젝트 컨벤션과 충돌하는 룰 제외:
#   E501  — line-too-long: ruff format 이 처리, 긴 URL/주석은 그대로 둔다
#   B008  — function-call-in-default: typer 의 typer.Option(...) 패턴 다수 사용
#   SIM117 — multiple-with-statements: 가독성 우선
ignore = ["E501", "B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
# 테스트는 long line / unused import 일부 허용
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["lmtune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/lmtune"]
omit = [
    "src/lmtune/**/__main__.py",
    "src/lmtune/visualization/dashboard/templates/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
